--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Prayer Analytics</title>
+
+  <!-- 🔥 Premium Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
